--- a/.environment
+++ b/.environment
@@ -1,4 +1,6 @@
 [Primary connection params]
+; possible drivers: 'mysql' - MySQL database, 'sqlsrv' - MS SQL Server and SQL Azure databases
+; 'mssql' - FreeTDS, 'pgsql' - PostgreSQL, 'oci' - Oracle
 DATABASE_DRIVER = mysql
 DATABASE_HOST = localhost
 DATABASE_NAME = test
@@ -7,7 +9,6 @@ DATABASE_PASSWORD =
 
 [Migration params]
 VERSION_TABLE_NAME = __migrationVersions
-CLASS_PREFIX = Migration
 FILE_EXTENSION = sql
 DIR_MIGRATION = DIR_ROOT/migrations
 DEFAULT_DESCRIPTION_MESSAGE = Created by CURRENT_USER, CURRENT_DATE
