- add database port support

--- a/.environment
+++ b/.environment
@@ -6,6 +6,7 @@ DATABASE_HOST = localhost
 DATABASE_NAME = test
 DATABASE_USER = root
 DATABASE_PASSWORD =
+DATABASE_PORT =
 
 [Migration params]
 VERSION_TABLE_NAME = __migrationVersions
@@ -27,3 +28,4 @@ DATABASE_HOST_SECONDARY = localhost
 DATABASE_NAME_SECONDARY = test
 DATABASE_USER_SECONDARY = root
 DATABASE_PASSWORD_SECONDARY =
+DATABASE_PORT_SECONDARY =
